[package]
name = "bigtable-rs"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tonic, prost, and prost-types are need for build generated rs files
tonic = {version="0.4.0", features = ["tls", "transport"]}
prost = "0.7.0"
prost-types = "0.7.0"

[build-dependencies]
tonic-build = "0.4.0"
