[package]
name = "bigtable_rs"
description = "A very simple Google Bigtable client lib in Rust"
version = "0.2.6"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/liufuyang/bigtable_rs/"
keywords = ["bigtable"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tonic, prost, and prost-types are need for build generated rs files
http = "0.2.11"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
tonic = { version = "0.11.0", features = ["tls", "transport"] }
tower = { version = "0.4" }
prost = "0.12.2"
prost-types = "0.12.2"
prost-wkt = "0.5.0"
prost-wkt-types = "0.5.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["base64"] }
# end of above part
gcp_auth = "0.10.0"
log = "0.4.20"
thiserror = "1.0.50"

[dev-dependencies]
env_logger = "0.11.1"
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["cleanup-markdown"]}
prost-build = "0.12.2"
prost-wkt-build = "0.5.0"
