[package]
name = "examples"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "simple_read"
path = "src/simple_read.rs"
[[bin]]
name = "simple_read2"
path = "src/simple_read2.rs"

[dependencies]
bigtable-rs = { path = "../bigtable-rs"}
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }