[package]
name = "examples"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "simple_read"
path = "src/simple_read.rs"

[[bin]]
name = "sample_row_keys"
path = "src/sample_row_keys.rs"

[[bin]]
name = "simple_write"
path = "src/simple_write.rs"

[[bin]]
name = "http_server"
path = "src/http_server.rs"

[dependencies]
bigtable_rs = { path = "../bigtable_rs" }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
env_logger = "0.8.2"
warp = "0.3.0"
serde = { version = "1.0.61", features = ["derive"] }
serde_json = "1.0.61"
