[package]
name = "examples"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "simple_read"
path = "src/simple_read.rs"

[[bin]]
name = "sample_row_keys"
path = "src/sample_row_keys.rs"

[[bin]]
name = "simple_write"
path = "src/simple_write.rs"

[[bin]]
name = "http_server"
path = "src/http_server/http_server.rs"

[[bin]]
name = "custom_path_connection"
path = "src/custom_path_connection.rs"

[[bin]]
name = "prefix"
path = "src/prefix.rs"

[dependencies]
bigtable_rs = { path = "../bigtable_rs" }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
env_logger = "0.11.1"
log = "0.4.20"
warp = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gcp_auth = "0.12.0"
